# critibot

./: .gitignore  Cargo.toml
src/: commands.rs  ecrit.rs  main.rs
src/ecrit/: fields.rs
