[package]
name = "critibot"
version = "4.1.0"
edition = "2021"

[dependencies]
strum = "0.27"
strum_macros = "0.26"
rand = "0.8"
maplit = "1.0"
regex = "1.10"
fondabots-lib = { git = "https://github.com/Fondation-SCP/fondabots-lib", tag = "v1.3.0"}
serenity = "0.12"
chrono = "0.4"
rss = "2.0"
poise = "0.6"
reqwest = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }